--- a/index.html
+++ b/index.html
@@ -9,6 +9,9 @@
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
     <script src="https://cdn.tailwindcss.com"></script>
 
+    <!--font awesome-->
+    <script src="https://kit.fontawesome.com/69fa576880.js" crossorigin="anonymous"></script>
+
     <!--Tailwind custom color-->
     <script>
         tailwind.config = {
@@ -35,7 +38,30 @@
 </head>
 <body class="font-manrope">
     <!--header section-->
-    <header>
+    <header class="container mx-auto">
+
+      <div class="hero">
+        <div class="hero-content flex-col md:flex-row lg:flex-row">
+          <div>
+            <h1 class="text-7xl font-extrabold">
+              It's good <br>
+              tea time at The <br>
+              Tea House</h1>
+            <p class="py-6 text-lg font-medium">Tea and Botanical Solutions Supplier <br>Give Optimum Satisfaction To Your Taste Buds.</p>
+            <button class="btn btn-primary">Explore More !</button>
+          </div>
+          <div>
+            <img src="./images/banner.png" class="max-w-sm rounded-lg shadow-2xl"/>
+            <div class="flex items-center gap-4">
+              <i class="fa fa-solid fa-star text-5xl" style="color: #ffc800;"></i>
+              <div>
+                <h3>5.00</h3>
+                <p>Trust Pilot Ratings</p>
+              </div>
+            </div>
+          </div>
+        </div>
+      </div>
 
     </header>
 
