--- a/index.html
+++ b/index.html
@@ -51,11 +51,11 @@
             <button class="btn btn-primary">Explore More !</button>
           </div>
           <div>
-            <img src="./images/banner.png" class="max-w-sm rounded-lg shadow-2xl"/>
-            <div class="flex items-center gap-4">
-              <i class="fa fa-solid fa-star text-5xl" style="color: #ffc800;"></i>
+            <img src="./images/banner.png" class="max-w-sm"/>
+            <div class="-mt-10 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded-lg">
+              <i class="fa fa-solid fa-star text-4xl text-amber-400"></i>
               <div>
-                <h3>5.00</h3>
+                <h3 class="text-2xl font-semibold">5.00</h3>
                 <p>Trust Pilot Ratings</p>
               </div>
             </div>
