--- a/index.html
+++ b/index.html
@@ -67,6 +67,30 @@
 
     <!--main Section-->
     <main>
+      <section class="container mx-auto text-center my-24">
+        <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
+        <p class="lg:max-w-3xl mx-auto text-base font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+
+        <!--featured tea card container-->
+
+        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+          <!--card no 1-->
+            <div class="card w-96 bg-base-100 bg-gradient-to-r from-[#f4f4f4] to-[#f5f5f5] shadow-xl">
+              <figure class="px-10 pt-10">
+                <img src="./images/tea-1.png" alt="Shoes" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title">Shoes!</h2>
+                <p>If a dog chews shoes whose shoes does he choose?</p>
+              </div>
+            </div>
+
+          <div></div>
+          <div></div>
+          <div></div>
+        </div>
+
+      </section>
 
     </main>
 
