--- a/index.html
+++ b/index.html
@@ -1,9 +1,13 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Batashi Coffee Shop</title>
+
+    <!--Fav icon-->
+    <link rel="shortcut icon" href="./images/coffee-cup.png" type="image/x-icon">
 
     <!--tailwind and daisyui-->
     <link href="https://cdn.jsdelivr.net/npm/daisyui@3.3.1/dist/full.css" rel="stylesheet" type="text/css" />
@@ -36,6 +40,7 @@
         }
     </style>
 </head>
+
 <body class="font-manrope">
     <!--header section-->
     <header class="container mx-auto">
@@ -52,7 +57,7 @@
           </div>
           <div>
             <img src="./images/banner.png" class="max-w-sm"/>
-            <div class="-mt-10 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded-lg">
+            <div class="-mt-11 flex items-center gap-4 drop-shadow-lg bg-white p-5 w-60 rounded-lg">
               <i class="fa fa-solid fa-star text-4xl text-amber-400"></i>
               <div>
                 <h3 class="text-2xl font-semibold">5.00</h3>
@@ -67,29 +72,97 @@
 
     <!--main Section-->
     <main>
+      <!--featured Section-->
       <section class="container mx-auto text-center my-24">
         <h2 class="text-5xl font-extrabold mb-5">Our Featured Products</h2>
-        <p class="lg:max-w-3xl mx-auto text-base font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
+        <p class="lg:max-w-3xl mx-auto mb-10 text-base font-medium">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.</p>
 
         <!--featured tea card container-->
 
-        <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
+        <div class="grid gap-7 grid-cols-1 md:grid-cols-2 lg:grid-cols-4">
           <!--card no 1-->
-            <div class="card w-96 bg-base-100 bg-gradient-to-r from-[#f4f4f4] to-[#f5f5f5] shadow-xl">
+            <div class="card p-6 bg-gradient-to-r from-[#f4f4f4] to-[#ebebeb] shadow-xl">
               <figure class="px-10 pt-10">
                 <img src="./images/tea-1.png" alt="Shoes" class="rounded-xl" />
               </figure>
               <div class="card-body items-center text-center">
-                <h2 class="card-title">Shoes!</h2>
-                <p>If a dog chews shoes whose shoes does he choose?</p>
+                <h2 class="card-title text-2xl font-bold">Milk Tea</h2>
+                <p class="font-medium text-gray-500">Creamer could be replaced by fresh milk</p>
               </div>
             </div>
 
-          <div></div>
-          <div></div>
-          <div></div>
+            <!--card no 2-->
+            <div class="card p-6 bg-gradient-to-r from-[#f4f4f4] to-[#ebebeb] shadow-xl">
+              <figure class="px-10 pt-10">
+                <img src="./images/tea-2.png" alt="Shoes" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title text-2xl font-bold">Black Tea</h2>
+                <p class="font-medium text-gray-500">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+
+            <!--card no 3-->
+            <div class="card p-6 bg-gradient-to-r from-[#f4f4f4] to-[#ebebeb] shadow-xl">
+              <figure class="px-10 pt-10">
+                <img src="./images/tea-3.png" alt="Shoes" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title text-2xl font-bold">Lemon Tea</h2>
+                <p class="font-medium text-gray-500">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
+
+            <!--card no 4-->
+            <div class="card p-6 bg-gradient-to-r from-[#f4f4f4] to-[#ebebeb] shadow-xl">
+              <figure class="px-10 pt-10">
+                <img src="./images/tea-4.png" alt="Shoes" class="rounded-xl" />
+              </figure>
+              <div class="card-body items-center text-center">
+                <h2 class="card-title text-2xl font-bold">Green Tea</h2>
+                <p class="font-medium text-gray-500">Creamer could be replaced by fresh milk</p>
+              </div>
+            </div>
         </div>
 
+      </section>
+
+      <!--Ever Great Tea Section-->
+      <section class="my-24 flex gap-12 flex-col lg:flex-row">
+
+        <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
+            <div class="h-36 rounded-xl bg-gradient-to-r from-red-100 to-orange-100">
+
+            </div>
+
+            <div class="row-span-2 rounded-xl bg-[#e6a6231a] px-5 py-6 flex justify-center items-center">
+              <img src="./images/fresh-1.png" alt="">
+            </div>
+
+            <div class="row-span-2 rounded-xl bg-green-50 px-5 py-6 flex justify-center items-center">
+              <img src="./images/fresh-2.png" alt="">
+            </div>
+
+            <div class="h-36 rounded-xl bg-gradient-to-r from-gray-200 to-gray-50">
+
+            </div>
+        </div>
+
+        <div class="space-y-4 flex-1">
+          <h3 class="text-5xl font-extrabold">
+            Great Tea, Freshly <br> Presented
+          </h3>
+          <p class="font-medium text-gray-500">The meaning of gong cha is chanese is to provide the best tea to emperor from all possessions . It represents the highest quality and self expectation. Establishing in 2006, Gong cha had been deeply appreciated by its custoers  because of good words of mouth and unique customized service orginated from Taiwan.
+          </p>
+          <h4 class="text-xl font-extrabold">
+            Unique Taste
+          </h4>
+          <p class="font-medium text-gray-500">A Unique and different style from other teapots gives a luxurious and minimalist impression</p>
+          <h4 class="text-xl font-extrabold">
+            Premium Quality
+          </h4>
+          <p class="font-medium text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
       </section>
 
     </main>
