--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@
     <!--header section-->
     <header class="container mx-auto">
 
-      <div class="hero">
-        <div class="hero-content flex-col md:flex-row lg:flex-row">
+      <div class="pt-10">
+        <div class="flex flex-col md:justify-between md:flex-row lg:flex-row">
           <div>
             <h1 class="text-7xl font-extrabold">
               It's good <br>
@@ -162,6 +162,31 @@
             Premium Quality
           </h4>
           <p class="font-medium text-gray-500">Premium Quality that makes tea more elegant and more durable when you use it.</p>
+        </div>
+      </section>
+
+      <!--Happy client section-->
+      <section class="my-24 flex flex-col md:flex-row lg:flex-row justify-between">
+        <div class="">
+          <h2 class="text-5xl font-extrabold">
+            Meet Our Super <br> Clients
+          </h2>
+          <p class="py-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+          </p>
+          <button class="btn btn-primary">Show All</button>
+        </div>
+
+        <div>
+          <div class="p-10">
+            <p>
+              We are providing the best and suitable home insurance services for the people who are interested to treatment
+            </p>
+            <h4 class="py-4 font-bold">
+              Ilham Yuda
+            </h4>
+            <p>Businessman</p>
+          </div>
+
         </div>
       </section>
 
