modified review section

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
     <header class="container mx-auto">
 
       <div class="pt-10">
-        <div class="flex flex-col md:justify-between md:flex-row lg:flex-row">
+        <div class="flex flex-col md:justify-center md:gap-40 md:flex-row lg:flex-row">
           <div>
             <h1 class="text-7xl font-extrabold">
               It's good <br>
@@ -128,7 +128,7 @@
       </section>
 
       <!--Ever Great Tea Section-->
-      <section class="my-24 flex gap-12 flex-col lg:flex-row">
+      <section class="container mx-auto my-24 flex gap-12 flex-col lg:flex-row">
 
         <div class="grid gap-8 grid-cols-1 md:grid-cols-2 flex-1">
             <div class="h-36 rounded-xl bg-gradient-to-r from-red-100 to-orange-100">
@@ -166,7 +166,8 @@
       </section>
 
       <!--Happy client section-->
-      <section class="my-24 flex flex-col md:flex-row lg:flex-row justify-between">
+      <section class="container mx-auto my-24 flex flex-col md:flex-row lg:flex-row justify-between bg-gradient-to-tr from-orange-400 to-red-600 rounded-xl">
+        
         <div class="">
           <h2 class="text-5xl font-extrabold">
             Meet Our Super <br> Clients
@@ -176,8 +177,28 @@
           <button class="btn btn-primary">Show All</button>
         </div>
 
-        <div>
-          <div class="p-10">
+        <div class="">
+          <div class="bg-white p-10 rounded-xl">
+            <p>
+              We are providing the best and suitable home insurance services for the people who are interested to treatment
+            </p>
+            <h4 class="py-4 font-bold">
+              Ilham Yuda
+            </h4>
+            <p>Businessman</p>
+          </div>
+
+          <div class="bg-white p-10 rounded-xl">
+            <p>
+              We are providing the best and suitable home insurance services for the people who are interested to treatment
+            </p>
+            <h4 class="py-4 font-bold">
+              Ilham Yuda
+            </h4>
+            <p>Businessman</p>
+          </div>
+
+          <div class="bg-white p-10 rounded-xl">
             <p>
               We are providing the best and suitable home insurance services for the people who are interested to treatment
             </p>
