--- a/index.html
+++ b/index.html
@@ -166,19 +166,25 @@
       </section>
 
       <!--Happy client section-->
-      <section class="container mx-auto my-24 flex flex-col md:flex-row lg:flex-row justify-between bg-gradient-to-tr from-orange-400 to-red-600 rounded-xl">
+      <section class="container mx-auto my-24 flex flex-col md:flex-row lg:flex-row md:justify-center bg-gradient-to-tr from-orange-400 to-red-600 rounded-xl md:px-16 lg:py-24 gap-10">
         
-        <div class="">
-          <h2 class="text-5xl font-extrabold">
+        <div class="flex items-center pr-32">
+          <div class="space-y-8">
+            <h2 class="text-5xl font-extrabold text-white">
             Meet Our Super <br> Clients
-          </h2>
-          <p class="py-5">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
-          </p>
-          <button class="btn btn-primary">Show All</button>
+            </h2>
+            <p class="text-white">There are many variations of passages of Lorem Ipsum available, but the majority have suffered alteration in some form, by injected humour, or randomised words which don't look even slightly believable.
+            </p>
+            <button class="btn btn-primary">Show All</button>
+          </div>
         </div>
 
-        <div class="">
-          <div class="bg-white p-10 rounded-xl">
+        <!--review container-->
+        <div class="relative">
+
+          <!--next review-->
+          <div class="relative opacity-50 bg-white p-10 rounded-xl z-0">
+            <img class="absolute -top-5 -left-5  border-4 border-white rounded-full bg-white" src="./images/client.png" alt="">
             <p>
               We are providing the best and suitable home insurance services for the people who are interested to treatment
             </p>
@@ -186,9 +192,14 @@
               Ilham Yuda
             </h4>
             <p>Businessman</p>
+            <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+            </div>
           </div>
 
-          <div class="bg-white p-10 rounded-xl">
+            <!--current review-->
+          <div class="absolute top-36 -left-36 lg:w-[500px] bg-white p-10 rounded-xl z-10">
+            <img class="absolute -top-5 -left-5  border-4 border-white rounded-full bg-white" src="./images/client.png" alt="">
             <p>
               We are providing the best and suitable home insurance services for the people who are interested to treatment
             </p>
@@ -196,9 +207,14 @@
               Ilham Yuda
             </h4>
             <p>Businessman</p>
+            <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+            </div>
           </div>
 
-          <div class="bg-white p-10 rounded-xl">
+            <!--previous review-->
+          <div class="relative opacity-50 bg-white p-10 rounded-xl z-0">
+            <img class="absolute -top-5 -left-5  border-4 border-white rounded-full bg-white" src="./images/client.png" alt="">
             <p>
               We are providing the best and suitable home insurance services for the people who are interested to treatment
             </p>
@@ -206,9 +222,12 @@
               Ilham Yuda
             </h4>
             <p>Businessman</p>
+            <div class="flex justify-end">
+              <img src="./images/circles.png" alt="">
+            </div>
           </div>
-
         </div>
+        
       </section>
 
     </main>
